--- a/wiki/Nodos.wiki
+++ b/wiki/Nodos.wiki
@@ -1,13 +1,61 @@
-#summary One-sentence summary of this page.
+<h1>Introducción</h1>
 
-= Introduction =
+Los Nodos identificados para el Sistema de Voto Electrónico, son los siguientes:
 
-Add your content here.
+Nodo1: RENIEC - Servicio de Lista de Candidatos (Productor)
+
+Será un Web Service que brinda la lista de candidatos al Módulo Web de Cédula Electrónica.
+
+Parametros: Ningun.o
+
+Retorno: Array List de Beans Candidato.
 
 
-= Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Nodo2: JNE - Servicio de Lista de Electores(Productor)
+
+Será un Web Service que brinda la lista de electores al Módulo de Cédula Electrónica.
+
+Parametros: Ninguno.
+
+Retorno: Array List de Beans Electores Hábiles.
+
+
+
+Nodo3: ONPE - Servicio de Registro de Voto
+
+Será una cola que reciba el voto y lo registre.
+
+Parametros:Bean Voto.
+
+Retorno: Ninguno.
+
+
+
+Nodo4: ONPE - Servicio de Generación de Resultados
+
+Será un método que permitirá ver los resultados oficiales al termino de la votación.
+
+Parametros:Ninguno.
+
+Retorno: Bean con resultados de la votación.
+
+
+
+Nodo5: ONPE - Módulo de Cédula Electrónica
+
+Será un formulario que capture el voto y lo envíe a una cola para su posterior registro. Para ello hará uso de los servicios del nodo 1 y 2. Una vez que el usuario registre su voto, dichos datos viajarán al nodo 3 y por último para consultar los resultados hará uso del nodo 4.
+
+Parametros:Los Ingresados por el usuario.
+
+Retorno: Flag indicando que el voto ha sido efectuado correctamente.
+
+
+
+Nodo6: BN - Servicio de Monto de Multa
+
+Será un método que calcule el monto total de la multa.
+
+Parametros: Cantidad de personas que votaron y cantidad total de electores.
+
+Retorno: Monto total de la multa.
